# Note-App-FastApi-SqlAlchemy-Celery-DDD

./: Dockerfile.app  Dockerfile.celery  Dockerfile.flower  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  setup_infra.py  stress_test.py
alembic/: env.py
alembic/versions/: 1a781caa7327_added.py  3a5acd12d1df_added_is_active_field_to_user_model.py  a1ca95e614c4_added_user_model.py
celery_worker/: __init__.py
celery_worker/scheduled/: __init__.py
celery_worker/tasks/: __init__.py
src/app/exception_handlers/: common.py
src/app/routers/: note_routers.py  user_routers.py
src/app/services/: note_service.py  user_service.py
src/app/usecases/note/: create_note.py  create_note_by_file.py  get_note_by_id.py
src/app/usecases/user/: __init__.py  create_user.py  delete_user_by_id.py  get_user_by_id.py  update_user.py
src/core/: settings.py
src/core/di/: injector.py  note_container.py  user_container.py
src/core/errors/: base.py
src/domain/common/: __init__.py  use_case.py
src/domain/common/integration/: file_storage_provider.py
src/domain/integration/queue/: __init__.py
src/domain/integration/storage/: __init__.py
src/domain/notes/: dtos.py
src/domain/notes/repositories/: note_repository.py
src/domain/notes/services/: note_service.py
src/domain/notes/usecases/: create_note.py  create_note_by_file.py  get_note_by_id.py
src/domain/user/: dtos.py
src/infra/common/: errors.py
src/infra/database/: __init__.py  connection.py
src/infra/repositories/: base_repository.py  note_repository.py  user_repository.py
(+20 files in other folders)
